src/test/compile-fail/keyword-super.rs
fn main() {
    let super: int; //~ ERROR found `super` in ident position
}
